# kutsh-veille-marches

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: claude.yml
decisions/: 2026-06-23-scrape-nukema-via-api-json.md
scripts/: run.py
src/veille_marches/: __init__.py  __main__.py  analyzer.py  basecamp.py  browser.py  config.py  dce.py  pipeline.py  relevance.py  scraper.py  signals.py  state.py
tests/: conftest.py  test_analyzer.py  test_dce.py  test_outputs.py  test_pipeline.py  test_relevance.py  test_scraper.py  test_state.py
tests/fixtures/: cctp_sample.docx  nukema_details.json  nukema_query.json
