[project]
name = "kutsh-veille-marches"
version = "0.1.0"
description = "Veille marchés publics Kutsh — scrape nukema, filtre/analyse les consultations urbanisme, poste sur Basecamp + Twenty"
requires-python = ">=3.12"
dependencies = [
    # Scrape : l'API JSON de nukema est appelable en HTTP direct (urllib stdlib),
    # mais Playwright sert de repli pour amorcer une session navigateur si besoin
    # (ex. cookies/anti-bot) et pour tenter le téléchargement des DCE.
    "playwright>=1.40",
    # Client Twenty partagé (cf. spec : ne pas dupliquer un client CRM).
    "kutsh-crm @ git+https://github.com/kutsh/kutsh-crm.git",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.6",
]

[project.scripts]
veille-marches = "veille_marches.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
# Autorise la dépendance git directe (kutsh-crm @ git+https://…).
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/veille_marches"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
