[project]
name = "kutsh-veille-marches"
version = "0.1.0"
description = "Veille marchés publics Kutsh — scrape nukema, filtre/analyse les consultations urbanisme, poste sur Basecamp + Twenty"
requires-python = ">=3.12"
dependencies = [
    # Chemin nominal = l'API JSON de nukema, appelable en HTTP direct (urllib stdlib)
    # → AUCUNE dépendance navigateur en core. Playwright = repli optionnel (extra `browser`).
    # Client Twenty partagé (cf. spec : ne pas dupliquer un client CRM).
    "kutsh-crm @ git+https://github.com/kutsh/kutsh-crm.git",
]

[project.optional-dependencies]
# Repli navigateur (amorçage session / anti-bot). Inutile pour le chemin API JSON ;
# non installé dans le worker Prefect (image légère).
browser = ["playwright>=1.40"]
dev = [
    "pytest>=8",
    "ruff>=0.6",
]

[project.scripts]
veille-marches = "veille_marches.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
# Autorise la dépendance git directe (kutsh-crm @ git+https://…).
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/veille_marches"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
